syntax = "proto3";

package BepInEx;

message CommonServiceResponse {
	bool success = 1;
	string error = 2;
}
